--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-reveal": "^1.2.2"
+    "react-reveal": "^1.2.2",
+    "swiper": "^8.4.5"
   },
   "devDependencies": {
     "eslint": "8.31.0",
