--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-reveal": "^1.2.2",
+    "sharp": "^0.31.3",
     "swiper": "^8.4.5"
   },
   "devDependencies": {
