--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.2.2",
+    "install": "^0.13.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
